--- a/Twitter Customer Support Analysis v5.ipynb
+++ b/Twitter Customer Support Analysis v5.ipynb
@@ -1366,7 +1366,7 @@
     "    umass = models.CoherenceModel(model=lda, corpus=corpus, coherence='u_mass')\n",
     "    cv = models.CoherenceModel(model=lda, texts=texts, coherence='c_v')\n",
     "    \n",
-    "    return (perps, umass.get_coherence(), cv.get_coherence())"
+    "    return (perps, umass.get_coherence(), cv.get_coherence(), lda)"
    ]
   },
   {
